import from index

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "package",
-  "version": "1.0.0",
+  "name": "fluid-webgl",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "type": "module",
