--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 
     "module": "es6",
     "target": "es5",
-
+    "declaration": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
